--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -20,8 +20,8 @@
 .profile-image-wrapper::before {
     content: '';
     position: absolute;
-    top: -20px;
-    left: -20px;
+    top: 20px;
+    right: -20px;
     width: 100%;
     height: 100%;
     background-color: rgba(191, 161, 109, 0.2);
